--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "latest",
@@ -47,6 +48,7 @@
     "embla-carousel-react": "latest",
     "framer-motion": "latest",
     "html2canvas": "latest",
+    "html2pdf.js": "^0.10.3",
     "input-otp": "latest",
     "jspdf": "latest",
     "lucide-react": "^0.454.0",
